test.first.fix.1

--- a/data/styles.css
+++ b/data/styles.css
@@ -7,6 +7,8 @@
   text-align:center;
   line-height:normal;
 }
+.box_1 {
+}
 .heading_1 {
   font-family:'Arial Normal', 'Arial';
   font-weight:bold;
