--- a/files/page_1/styles.css
+++ b/files/page_1/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:10px;
+  width:1166px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -11,4 +11,1148 @@
 #base {
   position:absolute;
   z-index:0;
+}
+#u228_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1166px;
+  height:510px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u228 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1166px;
+  height:510px;
+}
+#u229 {
+  position:absolute;
+  left:2px;
+  top:247px;
+  width:1162px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u230_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:55px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-align:center;
+}
+#u230 {
+  position:absolute;
+  left:10px;
+  top:10px;
+  width:55px;
+  height:16px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-align:center;
+}
+#u231 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:55px;
+  word-wrap:break-word;
+}
+#u232_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u232 {
+  position:absolute;
+  left:646px;
+  top:11px;
+  width:53px;
+  height:16px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u233 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  white-space:nowrap;
+}
+#u234_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u234 {
+  position:absolute;
+  left:393px;
+  top:11px;
+  width:53px;
+  height:16px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u235 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  white-space:nowrap;
+}
+#u236_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u236 {
+  position:absolute;
+  left:200px;
+  top:11px;
+  width:53px;
+  height:16px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u237 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  white-space:nowrap;
+}
+#u238_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:25px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:12px;
+}
+#u238 {
+  position:absolute;
+  left:10px;
+  top:54px;
+  width:140px;
+  height:25px;
+  font-size:12px;
+}
+#u239 {
+  position:absolute;
+  left:2px;
+  top:5px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u240_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:25px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u240 {
+  position:absolute;
+  left:10px;
+  top:268px;
+  width:140px;
+  height:25px;
+}
+#u241 {
+  position:absolute;
+  left:2px;
+  top:4px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u242 {
+  position:absolute;
+  left:70px;
+  top:6px;
+  width:120px;
+  height:25px;
+}
+#u242_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:120px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u243 {
+  position:absolute;
+  left:709px;
+  top:7px;
+  width:120px;
+  height:25px;
+}
+#u243_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:120px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u244 {
+  position:absolute;
+  left:456px;
+  top:7px;
+  width:180px;
+  height:25px;
+}
+#u244_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:180px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#u245 {
+  position:absolute;
+  left:263px;
+  top:6px;
+  width:120px;
+  height:25px;
+}
+#u245_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:120px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+}
+#u245_input:disabled {
+  color:grayText;
+}
+#u246 {
+  position:absolute;
+  left:10px;
+  top:89px;
+  width:1131px;
+  height:107px;
+}
+#u247_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:188px;
+  height:30px;
+}
+#u247 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:188px;
+  height:30px;
+}
+#u248 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:184px;
+  word-wrap:break-word;
+}
+#u249_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:68px;
+  height:30px;
+}
+#u249 {
+  position:absolute;
+  left:188px;
+  top:0px;
+  width:68px;
+  height:30px;
+}
+#u250 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:64px;
+  word-wrap:break-word;
+}
+#u251_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:164px;
+  height:30px;
+}
+#u251 {
+  position:absolute;
+  left:256px;
+  top:0px;
+  width:164px;
+  height:30px;
+}
+#u252 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:160px;
+  word-wrap:break-word;
+}
+#u253_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:92px;
+  height:30px;
+}
+#u253 {
+  position:absolute;
+  left:420px;
+  top:0px;
+  width:92px;
+  height:30px;
+}
+#u254 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:88px;
+  word-wrap:break-word;
+}
+#u255_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:128px;
+  height:30px;
+}
+#u255 {
+  position:absolute;
+  left:512px;
+  top:0px;
+  width:128px;
+  height:30px;
+}
+#u256 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:124px;
+  word-wrap:break-word;
+}
+#u257_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:128px;
+  height:30px;
+}
+#u257 {
+  position:absolute;
+  left:640px;
+  top:0px;
+  width:128px;
+  height:30px;
+}
+#u258 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:124px;
+  word-wrap:break-word;
+}
+#u259_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:111px;
+  height:30px;
+}
+#u259 {
+  position:absolute;
+  left:768px;
+  top:0px;
+  width:111px;
+  height:30px;
+}
+#u260 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:107px;
+  word-wrap:break-word;
+}
+#u261_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  height:30px;
+}
+#u261 {
+  position:absolute;
+  left:879px;
+  top:0px;
+  width:85px;
+  height:30px;
+}
+#u262 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u263_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:162px;
+  height:30px;
+}
+#u263 {
+  position:absolute;
+  left:964px;
+  top:0px;
+  width:162px;
+  height:30px;
+}
+#u264 {
+  position:absolute;
+  left:2px;
+  top:7px;
+  width:158px;
+  word-wrap:break-word;
+}
+#u265_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:188px;
+  height:36px;
+}
+#u265 {
+  position:absolute;
+  left:0px;
+  top:30px;
+  width:188px;
+  height:36px;
+}
+#u266 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:184px;
+  word-wrap:break-word;
+}
+#u267_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:68px;
+  height:36px;
+}
+#u267 {
+  position:absolute;
+  left:188px;
+  top:30px;
+  width:68px;
+  height:36px;
+}
+#u268 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:64px;
+  word-wrap:break-word;
+}
+#u269_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:164px;
+  height:36px;
+}
+#u269 {
+  position:absolute;
+  left:256px;
+  top:30px;
+  width:164px;
+  height:36px;
+}
+#u270 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:160px;
+  word-wrap:break-word;
+}
+#u271_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:92px;
+  height:36px;
+}
+#u271 {
+  position:absolute;
+  left:420px;
+  top:30px;
+  width:92px;
+  height:36px;
+}
+#u272 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:88px;
+  word-wrap:break-word;
+}
+#u273_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:128px;
+  height:36px;
+}
+#u273 {
+  position:absolute;
+  left:512px;
+  top:30px;
+  width:128px;
+  height:36px;
+}
+#u274 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:124px;
+  word-wrap:break-word;
+}
+#u275_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:128px;
+  height:36px;
+}
+#u275 {
+  position:absolute;
+  left:640px;
+  top:30px;
+  width:128px;
+  height:36px;
+}
+#u276 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:124px;
+  word-wrap:break-word;
+}
+#u277_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:111px;
+  height:36px;
+}
+#u277 {
+  position:absolute;
+  left:768px;
+  top:30px;
+  width:111px;
+  height:36px;
+}
+#u278 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:107px;
+  word-wrap:break-word;
+}
+#u279_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  height:36px;
+}
+#u279 {
+  position:absolute;
+  left:879px;
+  top:30px;
+  width:85px;
+  height:36px;
+}
+#u280 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u281_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:162px;
+  height:36px;
+}
+#u281 {
+  position:absolute;
+  left:964px;
+  top:30px;
+  width:162px;
+  height:36px;
+}
+#u282 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:158px;
+  word-wrap:break-word;
+}
+#u283_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:188px;
+  height:36px;
+}
+#u283 {
+  position:absolute;
+  left:0px;
+  top:66px;
+  width:188px;
+  height:36px;
+}
+#u284 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:184px;
+  word-wrap:break-word;
+}
+#u285_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:68px;
+  height:36px;
+}
+#u285 {
+  position:absolute;
+  left:188px;
+  top:66px;
+  width:68px;
+  height:36px;
+}
+#u286 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:64px;
+  word-wrap:break-word;
+}
+#u287_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:164px;
+  height:36px;
+}
+#u287 {
+  position:absolute;
+  left:256px;
+  top:66px;
+  width:164px;
+  height:36px;
+}
+#u288 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:160px;
+  word-wrap:break-word;
+}
+#u289_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:92px;
+  height:36px;
+}
+#u289 {
+  position:absolute;
+  left:420px;
+  top:66px;
+  width:92px;
+  height:36px;
+}
+#u290 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:88px;
+  word-wrap:break-word;
+}
+#u291_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:128px;
+  height:36px;
+}
+#u291 {
+  position:absolute;
+  left:512px;
+  top:66px;
+  width:128px;
+  height:36px;
+}
+#u292 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:124px;
+  word-wrap:break-word;
+}
+#u293_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:128px;
+  height:36px;
+}
+#u293 {
+  position:absolute;
+  left:640px;
+  top:66px;
+  width:128px;
+  height:36px;
+}
+#u294 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:124px;
+  word-wrap:break-word;
+}
+#u295_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:111px;
+  height:36px;
+}
+#u295 {
+  position:absolute;
+  left:768px;
+  top:66px;
+  width:111px;
+  height:36px;
+}
+#u296 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:107px;
+  word-wrap:break-word;
+}
+#u297_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  height:36px;
+}
+#u297 {
+  position:absolute;
+  left:879px;
+  top:66px;
+  width:85px;
+  height:36px;
+}
+#u298 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:81px;
+  word-wrap:break-word;
+}
+#u299_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:162px;
+  height:36px;
+}
+#u299 {
+  position:absolute;
+  left:964px;
+  top:66px;
+  width:162px;
+  height:36px;
+}
+#u300 {
+  position:absolute;
+  left:2px;
+  top:10px;
+  width:158px;
+  word-wrap:break-word;
+}
+#u301_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u301 {
+  position:absolute;
+  left:839px;
+  top:11px;
+  width:53px;
+  height:16px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+}
+#u302 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:53px;
+  white-space:nowrap;
+}
+#u303 {
+  position:absolute;
+  left:399px;
+  top:201px;
+  width:295px;
+  height:197px;
+  overflow:hidden;
+  visibility:hidden;
+}
+#u303_state0 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:295px;
+  height:197px;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u303_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u304_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:294px;
+  height:197px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u304 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:294px;
+  height:197px;
+}
+#u305 {
+  position:absolute;
+  left:2px;
+  top:90px;
+  width:290px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u306_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:90px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:13px;
+  text-align:center;
+}
+#u306 {
+  position:absolute;
+  left:38px;
+  top:27px;
+  width:90px;
+  height:40px;
+  font-size:13px;
+  text-align:center;
+}
+#u307 {
+  position:absolute;
+  left:0px;
+  top:12px;
+  width:90px;
+  word-wrap:break-word;
+}
+#u308 {
+  position:absolute;
+  left:138px;
+  top:27px;
+  width:107px;
+  height:40px;
+}
+#u308_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:107px;
+  height:40px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+}
+#u308_input:disabled {
+  color:grayText;
+}
+#u309_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:40px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:5px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u309 {
+  position:absolute;
+  left:71px;
+  top:89px;
+  width:140px;
+  height:40px;
+}
+#u310 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:136px;
+  word-wrap:break-word;
+}
+#u311_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:209px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:13px;
+}
+#u311 {
+  position:absolute;
+  left:44px;
+  top:152px;
+  width:209px;
+  height:20px;
+  font-size:13px;
+}
+#u312 {
+  position:absolute;
+  left:0px;
+  top:2px;
+  width:209px;
+  word-wrap:break-word;
+}
+#u313 {
+  position:absolute;
+  left:902px;
+  top:7px;
+  width:120px;
+  height:25px;
+}
+#u313_input {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:120px;
+  height:25px;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+}
+#u313_input:disabled {
+  color:grayText;
+}
+#u313_ann {
+  position:absolute;
+  left:1015px;
+  top:3px;
+  width:1px;
+  height:1px;
 }
